fix: interpreted file names in lovea file

--- a/src/todo
+++ b/src/todo
@@ -1,6 +1,7 @@
 - support ost sets in rbh_find
 - non reg test for OST sets
 
+- recovery MDT with HSM: set status of files
 - recov-tools: must reset fid of OST objects after MDS recovery
 
 /!\ symlink change if inode recycling
