Fix build for non-lustre. Fix RPM packaging for recov-tools.

--- a/src/todo
+++ b/src/todo
@@ -11,6 +11,31 @@
 - recovery MDT with HSM: set status of files
 - recov-tools: must reset fid of OST objects after MDS recovery
 
+- See this for Lustre 2.4:
+ * Sigh, because pre-2.4 uses
+ * struct lov_mds_md_v1 {
+ *      ........
+ *      __u64 lmm_object_id;
+ *      __u64 lmm_object_seq;
+ *      ......
+ *      }
+ * to identify the LOV(MDT) object, and lmm_object_seq will
+ * be normal_fid, which make it hard to combine these conversion
+ * to ostid_to FID. so we will do lmm_oi/fid conversion separately
+ *
+ * We can tell the lmm_oi by this way,
+ * 1.8: lmm_object_id = {inode}, lmm_object_gr = 0
+ * 2.1: lmm_object_id = {oid < 128k}, lmm_object_seq = FID_SEQ_NORMAL
+ * 2.4: lmm_oi.f_seq = FID_SEQ_NORMAL, lmm_oi.f_oid = {oid < 128k},
+ *      lmm_oi.f_ver = 0
+ *
+ * But currently lmm_oi/lsm_oi does not have any "real" usages,
+ * except for printing some information, and the user can always
+ * get the real FID from LMA, besides this multiple case check might
+ * make swab more complicate. So we will keep using id/seq for lmm_oi.
+
+
+
 /!\ symlink can change in case of inode recycling (ext3/4, ...)
 
 - db diff option: list changes since xxx
