rbh-report: added new option to get all info stored in DB for an entry.
rbh-report --entry-info|-e <path|id> returns all attributes in DB.

--- a/src/todo
+++ b/src/todo
@@ -42,9 +42,8 @@
 - bench diff
 - test diff for hardlinks
 
-- add rbh-report --get=<id>
 - add rbh-find --details
-- add rbh-find -print
+- add rbh-find -print -exec -delete...
 - refactoring lmgr_init
 
 - change code formatting to GNU
