listmgr: changed the implementation of path filters. optimized ListMgr_Get() function.
Perform 'ListMgr_Get' as a single DB operation on ENTRIES, ANNEX_INFO and NAMES (join)
instead of requesting each of them.
When querying/filtering on fullpath, join with NAMES tables to avoid inconstent values
bw parent_id, name and fullpath.

--- a/src/todo
+++ b/src/todo
@@ -1,3 +1,5 @@
+FIXME! LEFT JOIN ON NAMES table causes inode duplication in requests
+
 - manage LU-3620 in changelog reader
 - restore bulk search in rbh-find as a new option
 - support ost sets in rbh_find
