lmgr: avoid duplicate reporting of entries when filtering on STRIPE_ITEMS or NAMES + new non regression test 112. recov: fix disaster recovery for backup mode + new non regression tests 505, 506, 507.

--- a/src/todo
+++ b/src/todo
@@ -1,4 +1,4 @@
-FIXME! LEFT JOIN ON NAMES table causes inode duplication in requests
+- recov filters (start, resume)
 
 - manage LU-3620 in changelog reader
 - restore bulk search in rbh-find as a new option
