listmgr: fully reorganized the code of ListMgr_Init(). Versioning mechanism for triggers and functions code.
ListMgr_Init was a long function with a lot of duplicate code and similar loops for each table.
Table, triggers and function checks have been moved to smaller functions
called from the main ListMgr_Init function.

Dropping the triggers and functions at each daemon startup could result
in wrong information in ACCT table or failures in functions calls
if another instance of the program is running!!!
This is no longer done. A versioning mechanism of triggers and funtions
has been implemented to ensure their code is up-to-date without
having to drop them.

New macro RBH_BUG(msg) to abort() with information display on unexpected cases.

--- a/src/todo
+++ b/src/todo
@@ -1,4 +1,4 @@
-- recov filters (start, resume)
+- make size_acct optional
 
 - manage LU-3620 in changelog reader
 - restore bulk search in rbh-find as a new option
