--- a/src/todo
+++ b/src/todo
@@ -1,3 +1,4 @@
+- support env var in config file
 - make size_acct optional
 
 - manage LU-3620 in changelog reader
@@ -8,8 +9,7 @@
 - hardlink management in policies, recovery, etc.
 - check how mknode'd entries and handled by backup mode and rbh-diff
 - fix name update warnings
-- optimize "get" operation using JOIN (check performance impact)
-- 
+
 - recovery MDT with HSM: set status of files
 - recov-tools: must reset fid of OST objects after MDS recovery
 
@@ -35,7 +35,6 @@
  * except for printing some information, and the user can always
  * get the real FID from LMA, besides this multiple case check might
  * make swab more complicate. So we will keep using id/seq for lmm_oi.
-
 
 
 /!\ symlink can change in case of inode recycling (ext3/4, ...)
