rbh-find: added option -lsost to display OST information.

--- a/man/rbh-find.1
+++ b/man/rbh-find.1
@@ -70,8 +70,12 @@ Negate next argument
 Display attributes
 .TP
 .B
+\fB-lsost\fP
+Display OST information
+.TP
+.B
 \fB-print\fP
-Display the fullpath of matching entries (this is the default, unless \fB-ls\fP or \fB-exec\fP are used).
+Display the fullpath of matching entries (this is the default, unless \fB-ls\fP, \fB-lsost\fP or \fB-exec\fP are used).
 .SH ACTIONS
 
 .TP
