tests: added ost check order test (304) + fixed OST trigger tests

--- a/man/rbh-find.1
+++ b/man/rbh-find.1
@@ -54,10 +54,10 @@ same as '\fB-mtime\fP Ns'
 .B
 \fB-amin\fP \fIminute_crit\fP
 [-|+]<val>[s|m|h|d|y] (s: sec, m: min, h: hour, d:day, y:year. default unit is days)
-.RE
 .PP
-
-.RS
+\fB-ost\fP \fIost_index\fP
+.PP
+\fB-pool\fP ost_pool
 .TP
 .B
 \fB-not\fP, -!
@@ -68,6 +68,10 @@ Negate next argument
 .B
 \fB-ls\fP
 Display attributes
+.TP
+.B
+\fB-lsost\fP
+Display OST information
 .TP
 .B
 \fB-print\fP
