New fileclass management.
Entries are matched against all fileclasses, independently from policy definitions.
An entry can match multiple fileclasses: the DB stores the list of matched classes in a text field (fileclass).
A fileclass can be tagged as non-matchable by specifying 'match = no' in the config.
In this case, it can still be used in policy definitions, but it won't appear in classinfo report.

Change-Id: I2f5d4b34d77e799b3d591b833d00f6f805ba24f3

--- a/man/rbh-lhsm.1
+++ b/man/rbh-lhsm.1
@@ -51,6 +51,10 @@ For FS, OST or pool targets of purge policies, specifies the target disk usage (
 Apply policy to all entries in policy scope, without checking policy rules.
 .TP
 .B
+\fB-F\fP, \fB--force\fP
+Force applying policies even if no full scan has never been done (partial DB contents).
+.TP
+.B
 \fB--no-limit\fP
 Don't limit the maximum number/volume of policy actions per pass.
 .TP
