rbh_daemon: new '--run' option syntax and parameters.
This implements a new syntax of policy run parameters, to allow specifying
arguments per policy.
Example:
--run="lhsm_release(target=ost:1,target-usage=5%),lhsm_remove(max-count=10000)"

Supported parameters for policy runs are:
	* target: specify the policy run target (e.g. 'user:foo')
	* target-usage: specify the targeted usage for a purge policy
	* max-count: max number of policy actions to run
	* max-vol: max volume of policy actions to run

Options --target=xxx and --target-usage=xxx are still available:
they specify the default for policy run parameters.
E.g.
	--run=lhsm_migrate,lhsm_release --target=user:foo
is equivalent to:
	--run=lhsm_migrate(target=user:foo),lhsm_release(target=user:foo)

Specifying multiple "--run" options on the command line is now allowed
(their arguments are concatenated).

TODO:
	* check compat between parameters and target type (target_usage and FS, OST, POOL)
	* take max-count and max-vol into account in policy_triggers.
	* add tests

Change-Id: Ie1212aba0c7a2f2a6d2be906b5597de79b33c481

--- a/man/robinhood.1
+++ b/man/robinhood.1
@@ -45,7 +45,7 @@ all (all entries), user:username, group:grpname,
 file:path, class:fileclass, ost:ost_idx, pool:poolname.
 .TP
 .B
-\fB--usage-target\fP=\fIpercent\fP
+\fB--target-usage\fP=\fIpercent\fP
 For FS, OST or pool targets of purge policies, specifies the target disk usage (in \fIpercent\fP).
 .TP
 .B
