Added dates support to rbh-find -printf option
The %RA, %RC and %RM directives, followed by an strftime compatible
format, print the database last_access, creation_time and last_mod
respectively.

Change-Id: Ia7d0be7e791febc5344f9fe386e7d7d9518845be

--- a/man/rbh-find.1
+++ b/man/rbh-find.1
@@ -119,6 +119,15 @@ File owner
 Full file type (file, dir, fifo, ...)
 .IP %y
 File type as one letter (f, d, p, ...)
+.IP %RA
+.IP %RC
+.IP %RM
+Print Robinhood's "last access time", "creation time" and
+"modification time". These are not always the same as the file's
+atime/ctime/mtime attributes. An \fBstrftime\fP(1) directive must be
+added. For example: \fB%RCc %RMA %RAp %RAT\fP.
+This option can also take an strftime format option between
+brackets. For instance: \fB%RC{%A, %B %dth, %Y %F}\fP.
 .IP %Rc
 File class
 .IP %Rf
